resolve findbugs issues